--- a/vignettes/pdf.rmd
+++ b/vignettes/pdf.rmd
@@ -2,7 +2,7 @@
 title: "prevR Vignette (Short)"
 author: "S J Lax"
 date: "25 May 2016"
-output: word_document
+output: pdf_document
 ---
 
 # Introduction
