--- a/vignettes/prevR-vignette-short.Rmd
+++ b/vignettes/prevR-vignette-short.Rmd
@@ -1,23 +1,21 @@
 ---
-title: "prevR User Guide"
-author: "Stephanie J. Lax"
-date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteIndexEntry{prevR Vignette Short}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+title: "prevR Vignette (Short)"
+author: "S J Lax"
+date: "25 May 2016"
+output: pdf_document
 ---
 
 # Introduction
 
-In this vignette we are going to demonstrate how predictions of prevalence are calculated from a synthetic patient dataset using `prevR`. We define the term *prevalence* as "*point estimates of disease prevalence at a specific index date*". This is typically estimated from incidence and modelled survival probability using registry data. We calculate prevalence for *n* years, with *n* defined as the number of years prior to the index date for which we have included incident cases in the prevalent pool. Therefore, the higher the value of *n*, the more incident cases are included. If *n* is greater than the number of registry years for which we have real patient data, then the contribution for the years preceding the registry back to *n* years is estimated using Monte Carlo simulation. This is illustrated in the diagram below:
+In this vignette we are going to demonstrate how predictions of prevalence are calculated from a synthetic patient dataset using `prevR`. We define the term **prevalence** as **"point estimates of disease prevalence at a specific index date"**. This is typically estimated from incidence and modelled survival probability using registry data. We calculate prevalence for *n* years, with *n* defined as the number of years prior to the index date for which we have included incident cases in the prevalent pool. In other words, prevalence estimates consider those diagnosed in the preceding *n* years. Therefore, the higher the value of *n*, the more incident cases are included. If *n* is greater than the number of registry years for which we have real patient data, then the contribution for the years preceding the registry back to *n* years is estimated using Monte Carlo simulation. This is illustrated in the diagram below:
 
-![Estimating prevalence from registry data using prevR.](diagram.JPG)
+```{r, fig.height=7}
+library(grImport)
+```
 
-As prevalence is estimated for the simulated years using probability of survival from the disease, modelled on the available registry data, an appropriate value of *n* should be selected. If *n* is too low, the prevalence prediction will be an underestimate, as long-surviving cases may exist that were incident before *n* years preceding the index date. If *n* is too high relative to the length of the registry, the longer the simulation and the greater the reliance on extrapolation from the registry data. If the disease of interest is rapidly fatal or the registry is sufficiently long that survival is accurately modelled on the available data, larger values of *n* might be appropriate. It is necessary to keep in mind that, as survival is presently modelled with an asymptotic Weibull distribution, some long-surviving cases may appear to be immortal. To overcome the problem of extrapolating the survival of these patients, we recommend implementing our so-called *cure* model, which we will discuss in more detail later in this vignette. In short, the higher the value of *n*, the more accurate the prevalence prediction, as long as survival can be adequately modelled over *n* years from the available registry data. 
+As prevalence is estimated for the simulated years using probability of survival from the disease modelled on the available registry data, an appropriate value of *n* should be selected. If *n* is too low, the prevalence prediction will be an underestimate, as long-surviving cases may exist that were incident before *n* years preceding the index date. If *n* is too high relative to the length of the registry, the longer the simulation and the greater the reliance on extrapolation outside the registry data. If the disease of interest is rapidly fatal or the registry is sufficiently long that survival is accurately modelled on the available data, larger values of *n* might be appropriate. It is necessary to keep in mind that, as survival is presently modelled with an asymptotic Weibull distribution, some long-surviving cases may appear to be immortal. To overcome the problem of extrapolating the survival of these patients, we recommend implementing our so-called *cure* model, which we will discuss in more detail later in this vignette. In short, the higher the value of *n*, the more accurate the prevalence prediction, as long as survival can be adequately modelled over *n* years from the available registry data. 
 
-In the following sections we aim to take the user through the successive stages of the modelling process, outlining the correct use of the basic functions, illustrating how the diagnostics provided are used to check the validity of the assumptions required for simulating years of interest before the registry, and checking the agreement between observed and simulated prevalence estimates. First, we will inspect the consistency of incidence data between years of the registry and determine if it can be appropriate modelled as an homogeneous Poisson process **we don't actually spend much time discussing this asssumption and how the plots/tests detail if it's met, or indeed what to do if it isn't met**. Second, we will look at the consistency of the survival data between years of the registry and check the adequacy of a parametric model of survival **again we just plot the figures without detailed explanation**. We will also introduce the population survival data and explain how it integrates with patient survival to produce a *cure* model, where it is desired. Lastly, we will introduce our functions for estimating prevalence, demonstrate how to check the resulting estimates are reasonable, and harvest the posterior distribution of a modelled covariate.
+In the following sections we aim to take the user through the successive stages of the modelling process, outlining the correct use of the basic functions, illustrating how the diagnostics provided are used to check the validity of the assumptions required for simulating years of interest before the registry, and checking the agreement between observed and simulated prevalence estimates. First, we will inspect the consistency of incidence data between years of the registry and determine if it can be appropriate modelled as an homogeneous Poisson process. Second, we will look at the consistency of the survival data between years of the registry and check the adequacy of a parametric model of survival. We would emphasise that the user should check that their registry data does meet the required assumptions and if not, should understand that estimates of prevalence made using simulation based on that data may not be correct. Then, we will also introduce the population survival data and explain how it integrates with patient survival to produce a *cure* model, where it is desired. Lastly, we will introduce our functions for estimating prevalence, demonstrate how to check the resulting estimates are reasonable, and harvest the posterior distribution of a modelled covariate.
 
 ```{r, echo = FALSE, message = FALSE}
 devtools::load_all()
@@ -31,17 +29,19 @@ library(survival)
 data(prevsim)
 ```
 
-*prevsim* is a dataset that has been synthesised to resemble disease registry data. Incident cases are recorded from `r min(prevsim$entrydate)` to `r max(prevsim$entrydate)`, and events occur between `r min(prevsim$eventdate)` and `r max(prevsim$eventdate)`. It has 6 columns and is organised in a fashion typical to that found in real registry datasets. Patient data includes the date of both entry into the registry and last known event (be it death or a censored event time); survival time and an event indicator (*status*), along with both age and sex. The latter two are incorporated into the prevalence model at several levels, from being used as covariates in the survival modelling, and marking the incidence Poisson process. Currently `prevR` does not support the inclusion of additional variables in either the survival or incidence models, although this feature will be introduced in a later release.
+*prevsim* is a dataset that has been synthesised to resemble disease registry data. Incident cases are recorded from `r min(prevsim$entrydate)` to `r max(prevsim$entrydate)`, and events occur between `r min(prevsim$eventdate)` and `r max(prevsim$eventdate)`. It has 6 columns and is organised in a fashion typical to that found in real registry datasets. Patient data includes the date of both entry into the registry and last known event (be it death or a censored event time), survival time and an event indicator (*status*) along with both age and sex. The latter two are incorporated into the prevalence model at several levels, from being used as covariates in the survival modelling, and marking the incidence Poisson process. Currently `prevR` does not support the inclusion of additional variables in either the survival or incidence models, although this feature will be introduced in a later release.
 
 ```{r}
 summary(prevsim)
 ```
 
-The following plot shows the survival characteristics of the included dataset, *prevsim*, where, typical of many diseases, males have poorer survival outcomes than females. The Kaplan-Meier plot also highlights that survival starts to level off after 2000 days, leading us to assume a *cure model* for this dataset whereby a patient is considered cured after five years with the disease. At this point, their survival probability is instead modelled by population mortality rates. `prevR` includes data from the Office of National Statistics (ONS) to describe UK mortality rates (in dataset `UKmortality`), however, the user may supply their own population mortality data.
+The following Kaplan-Meier plot shows the survival probabilities associated with the included dataset, *prevsim*, where, typical of many diseases, males have poorer survival outcomes than females. It also highlights that survival starts to level off after 2000 days. As our registry is short relative to the duration of survival from this disease, we do not have much information about long-term survival after this point in our patient population in order to base a model. In this scenario, we recommend using general population survival data to model long-term survivors, and we refer to this as a *cure model*. In our example, a patient is considered *cured* after five years survival with the disease.
+
+Until the point in time that the cure model takes effect, survival is modelled on disease registry data; after, survival probability for the surviving cases is modelled using population mortality rates. `prevR` includes data from the Office of National Statistics (ONS) to describe UK mortality rates (in dataset `UKmortality`), however, the user may supply their own population mortality data. In addition to generating a better informed model, this approach also minimises the limitation of using a Weibull model, which tends towards predicting infinite survival times for long-term survivors, which will obviously not be correct. 
 
 ```{r basicsurvival, fig.height=4, fig.width=7}
 survf <- survfit(Surv(time, status) ~ sex, data=prevsim)
-plot(survf, lwd=2, col = c(1:2), xlab="Days", ylab="Probability")
+plot(survf, lwd=1, col = c("blue","red"), main="Survival stratified by sex", xlab="Days", ylab="Probability")
 legend(3000, 1, c("Males", "Females"), lty = 1, col=c("blue","red"))
 ```
 
@@ -59,7 +59,6 @@ raw_incidence
 It can be concluded that the disease has around 100 new cases each year. To assess consistency of the incidence data with an homogeneous Poisson process, the `test_poisson_fit`, `inspect_incidence`, and `poisson_incidence_sim` functions can be used.
 
 `test_poisson_fit` outputs the p-values for testing whether the process is over or underdispersed:
-**Is this precisely what they are?**
 
 ```{r}
 test_poisson_fit(raw_incidence)
@@ -72,18 +71,13 @@ c_inc <- cumulative_incidence(prevsim$entrydate, start = "2004-01-30", num_reg_y
 summary(c_inc)
 ```
 
-`inspect_incidence` displays a plot of the actual incidence rate as recorded in the registry, with the smooth overlaid. 
-**How to determine if Poisson is a good fit based on this?**
+`inspect_incidence` displays a plot of the actual incidence rate as recorded in the registry, with the smooth overlaid. If incidence is an homogeneous Poisson process, both the smooth (green) and incidence process (red) should remain within the 95% confidence interval (dashed blue) and be evenly distributed about the mean (blue line). The actual incidence values should also be distributed in such a way as to resemble Brownian motion around the smooth. **Clarify this is correct with Simon**
 
 ```{r, fig.width = 7, fig.height = 4}
 inspect_incidence(c_inc)
 ```
 
-`poisson_incidence_sim` simulates a large number of incident case datasets, where the incident cases are randomly uniformly distributed between the start and end date of the original registry. Smooths are then fitted to these datasets. For both the smooth from the `cincidence` object and the simulated smooths, the deviations from the actual data are calculated. The deviations of the simulated smooths are plotted in grey, while the deviation from the actual smooth is displayed in red, with confidence intervals in grey.
-
-For a homogeneous incidence process, the deviation from the smooths will be normally distributed, and so this plot expects to see evidence of this if the assumption is met:
-
-**Is this a correct summary? How to use this for diagnostic purposes?**
+`poisson_incidence_sim` and `poisson_incidence_sim_gg` simulate a large number of incident case datasets, where the incident cases are randomly uniformly distributed between the start and end date of the original registry. Smooths are then fitted to these datasets. For both the smooth from the `cincidence` object and the simulated smooths, the deviations from the actual data are calculated. The deviation of the actual incidence from it's corresponding smooth is displayed in orange, with the confidence intervals derived for each bin from the simulations in grey. If the incidence process is consistent with an homogeneous Poisson process, the deviation from the smooth will be normally distributed and the actual data should fall within the 95% confidence interval. This plot assists the user to decide if the assumption is met:
 
 ```{r, fig.width = 7, fig.height = 4}
 poisson_incidence_sim_gg(c_inc)
@@ -108,45 +102,20 @@ mean_incidence_rate(prevsim$entrydate, population_size = 3.5e6,
 
 # Survival modelling
 
-The second component to the prevalence estimation is the survival modelling process. It is recommended that the user inspects the survival data for consistency between years of the registry and with a Cox Proportional Hazards model as follows:
+The second component to the prevalence estimation is the survival modelling process. It is recommended that the user inspects the survival data for consistency with a Cox Proportional Hazards model and between years of the registry as follows:
 
-**How do these plots show that?, what are the CIs, the colours, the smooths etc... all showing?**
-
-It is always useful to plot the Kaplan-Meier estimator of the data, both as a whole and stratified by age to visually inspect for any inconsistencies.
+Firstly, it is always useful to plot the Kaplan-Meier estimator of the data, both as a whole and stratified by age to visually inspect for any inconsistencies:
 
 ```{r survivaldiag, fig.width = 7, fig.height = 4}
 km <- survfit(Surv(time, status) ~ 1, data=prevsim_r)
-plot(km, lwd=2, col="blue", xlab="Days", ylab="Survival probability")
+plot(km, lwd=2, col="blue", main="Overall Survival", xlab="Days", ylab="Survival probability")
 ```
 
 ```{r survivaldiag2, fig.width = 7, fig.height = 4}
 ages = c(55, 65, 75, 85, 100)
 km2 <- survfit(Surv(time, status) ~ cut(age, breaks=ages), data=prevsim_r)
-plot(km2, lwd=2, col=1:length(ages), xlab="Days", ylab="Survival probability")
-```
-
-**Why is Cox model fit here, not Weibull since that's what we use?**
-
-The effect of age on hazard can be visualised to determine if there are any non-linear effects:
-
-**What exactly is this plot of?!**
-
-```{r survivaldiag3, fig.width = 7, fig.height = 4}
-cx <- coxph(Surv(time, status) ~ age, data=prevsim_r)
-cxp <- survfit(cx, 
-               newdata=data.frame(age=sapply(seq(length(ages) - 1), 
-                                             function(i) mean(c(ages[i], ages[i + 1]))))) 
-plot(cox.zph(cx))
-lines(cxp, lwd=2, col=1:length(ages), lty=2, mark.time=F)
-
-```
-
-It is always essential to test the proportional hazards assumption:
-
-**Does the Weibull AFT parameterisation in `survreg` need the PH assumption to be met?**
-
-```{r}
-cox.zph(cx)
+plot(km2, lwd=2, col=1:length(ages), main="Survival stratified by age", xlab="Days", ylab="Survival probability")
+legend("topright", legend=substring(names(km2$strata), 25, 32), lty = 1, col=1:length(ages))
 ```
 
 It is also a useful diagnostic aid to plot the survival curve for each year of the registry to determine whether there are any patterns:
@@ -164,13 +133,29 @@ sapply(seq(num_reg_years),
                          mark.time = F, conf.int = F))
 ```
 
+The effect of age on hazard can be visualised to determine if there are any non-linear effects, which is easily done using the `cox.zph` function from the `survival` package. If the proportional hazards assumption holds, the Schoenfeld residuals should be approximately normally distributed around the beta(t) line, which should be horizontal: **Is this correct? Also, why is Cox model fit here, not Weibull since that's what we use?**
+
+```{r survivaldiag3, fig.width = 7, fig.height = 4}
+cx <- coxph(Surv(time, status) ~ age, data=prevsim_r)
+cxp <- survfit(cx, 
+               newdata=data.frame(age=sapply(seq(length(ages) - 1), 
+                                             function(i) mean(c(ages[i], ages[i + 1]))))) 
+plot(cox.zph(cx))
+lines(cxp, lwd=2, col=1:length(ages), lty=2, mark.time=F)
+
+```
+
+It is also essential to test the proportional hazards assumption: **Does the Weibull AFT parameterisation in `survreg` actually need the PH assumption to be met?**
+
+```{r}
+cox.zph(cx)
+```
+
 ## Functional form of age
 
-`functional_form_age()` is provided so that the user can determine if modelling the effect of age as linear is appropriate. This function fits a Cox model to the data with a restricted cubic spline with the specified degrees of freedom. The model is returned by the function (as an `rms::cph object`, allowing the user to inspect the fit. The function can also plot relative hazard as a function of age with the `plot_fit` argument.
+`functional_form_age()` is provided so that the user can further investigate if modelling the effect of age as linear is appropriate. This function fits a Cox model to the data with a restricted cubic spline with the specified degrees of freedom. The model is returned by the function as an `rms::cph object`, allowing the user to inspect the fit. The function can also plot relative hazard as a function of age with the `plot_fit` argument.
 
-**is this what is being plotted? Never used Predict function before**
-
-**How is this different to the third plot in survival modelling above? **
+**Is this what is being plotted? Never used Predict function before. How is this different to the third plot in survival modelling above? **
 
 ```{r ageform2, fig.width = 7, fig.height = 4, error = TRUE}
 functional_form_age(Surv(time, status) ~ age, prevsim_r, df=4, plot_fit=T)
@@ -187,7 +172,7 @@ summary(wb)
 
 ## Population survival
 
-As an alternative to extrapolation from the Weibull model alone when modelling long-term survivors in patient data, we have implemented what we call a cure model. For example, the default `cure = 10` in the following functions for estimating prevalence, means a patient can be considered "cured" if they have survived until 10 years after diagnosis, and therefore from this point onwards their survival is modelled using population data rather than patient data. This requires having population level daily mortality rate data.
+For modelling long-term survivors in registry data, we have implemented a *cure* model option. For example, the default `cure = 10` in the following functions for estimating prevalence, means a patient can be considered "cured" if they have survived until 10 years after diagnosis, and therefore from this point onwards their survival is modelled using population data rather than patient data. 
 
 General population period survival data for the UK is loaded from the supplied `UKmortality` dataset, and yearly rates are translated into daily rates by linear interpolation using `population_survival_rate()`. 
 
@@ -211,7 +196,7 @@ As a reminder, prevalence is estimated using incidence and survival data from *n
 
 In the first instance, prevalence can be estimated by counting from the registry data. It is imperative that the number of incident cases is complete for estimating prevalence, and that follow-up data for all cases is complete at least until after the index date. In the case of the provided *prevsim* dataset there is a discrepency between the last recorded incident case and the last date of follow-up owing to a systematic difference in methods of incidence and survival data collection, as is typically the case in registry datasets where incidence and follow-up data are provided by different sources.
 
-`prevalence_counted` calculates prevalence contributions for each year of the provided registry data, specified using the `start` and `num_reg_years` arguments. In the example shown below, `r tail(determine_registry_years(start='2004-01-30', num_reg_years=9), n=1)` is the index date. This is calculated to be the last date of the last year of registry data included by the user. In `prevalence_counted()`, all cases alive after the index date are censored. 
+`prevalence_counted` calculates prevalence contributions for each year of the provided registry data, specified using the `start` and `num_reg_years` arguments. The index date, automatically calculated to be the last date of the last year of registry data included by the user, is `r tail(determine_registry_years(start='2004-01-30', num_reg_years=9), n=1)` in our example. In `prevalence_counted()`, all cases alive after the index date are censored. 
 
 NB: all follow-up data for the available incident cases is still used in survival modelling.
 
@@ -227,23 +212,27 @@ The function returns the prevalence contributions by year, in ascending order (i
 
 ## Simulation
 
-Prevalence is estimated using simulation by calling `prevalence()`. `num_years_to_estimate` corresponds to the number of years preceding the index date that contribute incident cases, if any values are larger than `num_reg_years` then the remainder of years have their incidence and survival characteristics simulated. By passing a vector to `num_years_to_estimate`, multiple estimates of prevalence at the index date can be calcualted with their own confidence intervals. The `population_size` variable is used to estimate prevalence per one hundred thousand (or at any rate specified by the `proportion` argument).
+Prevalence is estimated using simulation by calling `prevalence()`. `num_years_to_estimate` corresponds to the required number of years preceding the index date that contribute incident cases. If any values are larger than `num_reg_years` then the remainder of years have their incidence and survival characteristics simulated. By passing a vector to `num_years_to_estimate`, multiple estimates of prevalence at the index date can be calculated with their own confidence intervals. The `population_size` variable is used to estimate prevalence per one hundred thousand (or at any rate specified by the `proportion` argument).
 
 ```{r prevalencetotal, error = TRUE}
 prevalence_total <- prevalence(Surv(time, status) ~ sex(sex) + age(age) + entry(entrydate) + event(eventdate),
                                prevsim, num_years_to_estimate=c(3, 5, 10), population_size=1e6, cure=5, 
                                start='2004-01-30', num_reg_years=9)
+```
 
+Printing the `prevalence` object returned by the function of the same name displays the point estimate of prevalence at the index date using `num_years_to_estimate` years of data:
+
+```{r}
 prevalence_total
 ```
 
-Printing the `prevalence` object returned by the function of the same name displays the point estimate of prevalence at the index date using `num_years_to_estimate` years of data.
+More detail from the `prevalence` object can be harvested using `summary`, including the p-value from a chi squared test of the difference between the predicted and counted prevalence for the available years of registry data:
 
 ```{r}
 summary(prevalence_total)
 ``` 
 
-Confidence intervals can be found from within the object's `estimates` attribute.
+Calling the prevalence object's `estimates` attribute displays the point prevalence estimate along with rates per one hundred thousand and confidence intervals. As *n* increases, the prevalence estimate increases:
 
 ```{r}
 prevalence_total$estimates
@@ -251,14 +240,14 @@ prevalence_total$estimates
 
 ## Inspecting bootstrapped survival modelling
 
-To inspect the suitability of the bootstrapped survival modelling, a `survfit.prev` object can be constructed using the usual `survfit` call, excepting a data frame of new data (with identical column names to those found in the original dataset). In the example below, survival probability is estimated for a 60 year old male.
+To inspect the distribution of the bootstrapped survival models, a `survfit.prev` object can be constructed using the usual `survfit` call, accepting a data frame of new data (with identical column names to those found in the original dataset). In the example below, survival probability is estimated for a 60 year old male:
 
 ```{r}
 prevsurv <- survfit(prevalence_total, newdata=list(age=60, sex=0))
 prevsurv
 ```
 
-The `summary.survfit.prev` method provides *N*-year survival probabilities, with *N* specified as an argument vector.
+The `summary.survfit.prev` method provides *N*-year survival probabilities, with *N* specified as an argument vector:
 
 ```{r}
 summary(prevsurv, years=c(1, 3, 5, 10))
