--- a/vignettes/prevR-vignette-short.Rmd
+++ b/vignettes/prevR-vignette-short.Rmd
@@ -9,9 +9,7 @@ output: pdf_document
 
 In this vignette we are going to demonstrate how predictions of prevalence are calculated from a synthetic patient dataset using `prevR`. We define the term **prevalence** as **"point estimates of disease prevalence at a specific index date"**. This is typically estimated from incidence and modelled survival probability using registry data. We calculate prevalence for *n* years, with *n* defined as the number of years prior to the index date for which we have included incident cases in the prevalent pool. In other words, prevalence estimates consider those diagnosed in the preceding *n* years. Therefore, the higher the value of *n*, the more incident cases are included. If *n* is greater than the number of registry years for which we have real patient data, then the contribution for the years preceding the registry back to *n* years is estimated using Monte Carlo simulation. This is illustrated in the diagram below:
 
-```{r, fig.height=7}
-library(grImport)
-```
+![Estimating prevalence from registry data using prevR.](diagram.PDF)
 
 As prevalence is estimated for the simulated years using probability of survival from the disease modelled on the available registry data, an appropriate value of *n* should be selected. If *n* is too low, the prevalence prediction will be an underestimate, as long-surviving cases may exist that were incident before *n* years preceding the index date. If *n* is too high relative to the length of the registry, the longer the simulation and the greater the reliance on extrapolation outside the registry data. If the disease of interest is rapidly fatal or the registry is sufficiently long that survival is accurately modelled on the available data, larger values of *n* might be appropriate. It is necessary to keep in mind that, as survival is presently modelled with an asymptotic Weibull distribution, some long-surviving cases may appear to be immortal. To overcome the problem of extrapolating the survival of these patients, we recommend implementing our so-called *cure* model, which we will discuss in more detail later in this vignette. In short, the higher the value of *n*, the more accurate the prevalence prediction, as long as survival can be adequately modelled over *n* years from the available registry data. 
 
@@ -41,7 +39,8 @@ Until the point in time that the cure model takes effect, survival is modelled o
 
 ```{r basicsurvival, fig.height=4, fig.width=7}
 survf <- survfit(Surv(time, status) ~ sex, data=prevsim)
-plot(survf, lwd=1, col = c("blue","red"), main="Survival stratified by sex", xlab="Days", ylab="Probability")
+plot(survf, lwd=1, col = c("blue","red"), main="Survival stratified by sex", xlab="Days", 
+     ylab="Probability")
 legend(3000, 1, c("Males", "Females"), lty = 1, col=c("blue","red"))
 ```
 
@@ -108,22 +107,27 @@ Firstly, it is always useful to plot the Kaplan-Meier estimator of the data, bot
 
 ```{r survivaldiag, fig.width = 7, fig.height = 4}
 km <- survfit(Surv(time, status) ~ 1, data=prevsim_r)
-plot(km, lwd=2, col="blue", main="Overall Survival", xlab="Days", ylab="Survival probability")
+plot(km, lwd=2, col="blue", main="Overall Survival", xlab="Days", 
+     ylab="Survival probability")
 ```
 
 ```{r survivaldiag2, fig.width = 7, fig.height = 4}
 ages = c(55, 65, 75, 85, 100)
 km2 <- survfit(Surv(time, status) ~ cut(age, breaks=ages), data=prevsim_r)
-plot(km2, lwd=2, col=1:length(ages), main="Survival stratified by age", xlab="Days", ylab="Survival probability")
-legend("topright", legend=substring(names(km2$strata), 25, 32), lty = 1, col=1:length(ages))
+plot(km2, lwd=2, col=1:length(ages), main="Survival stratified by age", xlab="Days", 
+     ylab="Survival probability")
+legend("topright", legend=substring(names(km2$strata), 25, 32), lty = 1, 
+       col=1:length(ages))
 ```
 
 It is also a useful diagnostic aid to plot the survival curve for each year of the registry to determine whether there are any patterns:
 
 ```{r survivaldiag4, fig.width = 7, fig.height = 4, results='hide'}
-plot(km, lwd=2, col="blue", mark.time=F, conf.int=T, xlab="Days", ylab="Survival probability")
+plot(km, lwd=2, col="blue", mark.time=F, conf.int=T, xlab="Days", 
+     ylab="Survival probability")
 num_reg_years <- 9
-registry_years <- determine_registry_years(start='2004-01-30', num_reg_years=num_reg_years)
+registry_years <- determine_registry_years(start='2004-01-30', 
+                                           num_reg_years=num_reg_years)
 sapply(seq(num_reg_years),
        function(i) lines(survfit(Surv(time, status) ~ 1, 
                                  data=prevsim_r[prevsim_r$entrydate >= 
@@ -179,8 +183,10 @@ General population period survival data for the UK is loaded from the supplied `
 ```{r popsurv, fig.width = 7, fig.height = 4, error = TRUE}
 data(UKmortality)
 
-daily_survival_males <- population_survival_rate(rate ~ age, subset(UKmortality, sex == 0))
-daily_survival_females <- population_survival_rate(rate ~ age, subset(UKmortality, sex == 1))
+daily_survival_males <- population_survival_rate(rate ~ age, subset(UKmortality, 
+                                                                    sex == 0))
+daily_survival_females <- population_survival_rate(rate ~ age, subset(UKmortality, 
+                                                                      sex == 1))
 
 plot(daily_survival_males, type="l", col="blue", xlab="days", ylab="survival")
 lines(daily_survival_females, col="red")
@@ -215,8 +221,10 @@ The function returns the prevalence contributions by year, in ascending order (i
 Prevalence is estimated using simulation by calling `prevalence()`. `num_years_to_estimate` corresponds to the required number of years preceding the index date that contribute incident cases. If any values are larger than `num_reg_years` then the remainder of years have their incidence and survival characteristics simulated. By passing a vector to `num_years_to_estimate`, multiple estimates of prevalence at the index date can be calculated with their own confidence intervals. The `population_size` variable is used to estimate prevalence per one hundred thousand (or at any rate specified by the `proportion` argument).
 
 ```{r prevalencetotal, error = TRUE}
-prevalence_total <- prevalence(Surv(time, status) ~ sex(sex) + age(age) + entry(entrydate) + event(eventdate),
-                               prevsim, num_years_to_estimate=c(3, 5, 10), population_size=1e6, cure=5, 
+prevalence_total <- prevalence(Surv(time, status) ~ sex(sex) + age(age) + 
+                                   entry(entrydate) + event(eventdate),
+                               prevsim, num_years_to_estimate=c(3, 5, 10), 
+                               population_size=1e6, cure=5, 
                                start='2004-01-30', num_reg_years=9)
 ```
 
@@ -280,7 +288,8 @@ test_prevalence_fit(prevalence_total)
 The age distribution of simulated prevalent cases can be viewed as a histogram and compared with the age distribution of incident cases:
 
 ```{r, fig.height = 4, fig.width = 7}
-hist(prevsim$age[prevsim$entrydate >= min(registry_years) & prevsim$entrydate < max(registry_years)], 
+hist(prevsim$age[prevsim$entrydate >= min(registry_years) & 
+                     prevsim$entrydate < max(registry_years)], 
      col=rgb(1,0,0, alpha=0.5), xlim=c(0,100), ylim=c(0,0.045), 
      main = "", xlab = "age", prob = TRUE)
 hist(prevalence_total$simulated$posterior_age, 
