Housekeeping, removed CITATION and updated DESCRIPTION

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
   - More rigorous stress testing!
   - Improve poisson_sim_fit plot with Simon's updated formulated of deviation from smooth
-  - Determine how to include vignettes
+  - Centre image in user guide
   - Run through check
